All file loaders are functors. Camera always uses LH coordinates. No longer a template. Moved camera code into source file. Added aspect ration accessor to window. Removed virtual from window::impl destructor.

--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -285,7 +285,9 @@
     <ClCompile Include="qgl_brush.cpp" />
     <ClCompile Include="qgl_brush_buffer.cpp" />
     <ClCompile Include="qgl_brush_file_loader.cpp" />
+    <ClCompile Include="qgl_camera.cpp" />
     <ClCompile Include="qgl_camera_buffer.cpp" />
+    <ClCompile Include="qgl_camera_file_loader.cpp" />
     <ClCompile Include="qgl_cbv_descriptor_heap.cpp" />
     <ClCompile Include="qgl_cpy_cmd_list.cpp" />
     <ClCompile Include="qgl_depth_stencil.cpp" />
