--- a/Bridges/QGL_Content.NativeBridge/QGL_Content.NativeBridge.vcxproj.filters
+++ b/Bridges/QGL_Content.NativeBridge/QGL_Content.NativeBridge.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Folder_Helpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="QGLContentNative.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
